--- a/stretch-assignment/digital_timer/styles.css
+++ b/stretch-assignment/digital_timer/styles.css
@@ -2,13 +2,39 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
+  font-family: 'Oswald', sans-serif;
 }
 
 .digit {
   display: inline-block;
-  font-size: 80px;
+  font-size: 90px;
+  font-weight: bolder;
+  margin-right: 30px;
+  color: #292929;
+  text-shadow: 0px 0px 20px white;
 }
 
 .redDigit {
-  color: red;
+  color: rgb(177, 67, 228);
+  text-shadow: 3px 3px 2px grey;
 }
+
+.digits {
+  display: flex;
+  width: 65%;
+  height: 40%;
+  align-items: center;
+  justify-content: center;
+  border-radius: 130px;
+  box-shadow:
+  inset 0 0 50px #fff,      /* inner white */
+  inset 20px 0 80px #f0f,   /* inner left magenta short */
+  inset -20px 0 80px #0ff,  /* inner right cyan short */
+  inset 20px 0 300px #f0f,  /* inner left magenta broad */
+  inset -20px 0 300px #0ff, /* inner right cyan broad */
+  0 0 50px #fff,            /* outer white */
+  -10px 0 80px #f0f,        /* outer left magenta */
+  10px 0 80px #0ff;         /* outer right cyan */
+}
+
